--- a/src/app/landingpage/login/password-reset/password-reset.component.scss
+++ b/src/app/landingpage/login/password-reset/password-reset.component.scss
@@ -159,6 +159,8 @@ section {
   border-radius: 25px;
   padding: 2rem;
   min-width: 400px;
+  margin: 2rem;
+  text-align: center;
   h1 {
     font-size: 3.5em;
     margin: 0;
@@ -268,5 +270,11 @@ section {
   }
   .invalidFeedback {
     text-align: center;
+  }
+  .successMessage{
+    min-width: 210px;
+    h1 {
+      font-size: 2.5em;
+    }
   }
 }
