add Top5Videos complete/ cleancode Category

--- a/src/app/landingpage/video-site/video-category/video-category.component.html
+++ b/src/app/landingpage/video-site/video-category/video-category.component.html
@@ -23,6 +23,31 @@
                         </div>
                     }
                 </div>
+                <div>
+                    <h1>Top 5 of the week</h1>
+                    <div class="video4LoopContainer">
+                        @if (showArrows[1]) {
+                            <div class="arrowLeft">
+                                <button (click)="ArrowLeftClick(1)"><img src="../../../assets/icons/arrowLeft.png" alt=""></button>
+                            </div>
+                        }
+                        <div class="video4LoopBox" #video4LoopBox1>
+                            @for (video of top5Videos; track $index) {
+                                <app-video-preview
+                                    [video]="video"
+                                    (videoSelected)="onVideoSelected($event)"
+                                ></app-video-preview>
+                            }
+                        </div>
+                        @if (showArrows[1]) {
+                            <div class="arrowRight">
+                                <button (click)="ArrowRightClick(1)"><img src="../../../assets/icons/arrowRight.png" alt=""></button>
+                            </div>
+                        }
+                    </div>
+                
+
+                </div>
             </div>
         </div>
     </div>           
