--- a/src/app/landingpage/video-site/video-category/video-category.component.scss
+++ b/src/app/landingpage/video-site/video-category/video-category.component.scss
@@ -137,6 +137,6 @@ section {
 }
 @media (min-width: $screanWidthQHD) {
   .videoPosition {
-    font-size: xx-large;
+    font-size: x-large;
   }
 }
