--- a/src/app/shared/login/footer/footer.component.scss
+++ b/src/app/shared/login/footer/footer.component.scss
@@ -20,7 +20,7 @@
 @media (min-width: $screanWidthQHD) {
   .footer{
     span {
-      font-size: xx-large;
+      font-size: x-large;
     }
   }
 }
