--- a/src/app/shared/login/header/header.component.scss
+++ b/src/app/shared/login/header/header.component.scss
@@ -38,11 +38,11 @@
 @media (min-width: $screanWidthQHD) {
   .headerDiv {
     img {
-      width: 30rem;
+      width: 25rem;
     }
   
     .loginBtn {
-      font-size: xx-large;
+      font-size: x-large;
     }
   }
 
