--- a/src/app/shared/videoSite/header/header.component.scss
+++ b/src/app/shared/videoSite/header/header.component.scss
@@ -289,7 +289,7 @@ header {
    
       .headerBtns {
         .headerBtn {
-          font-size: xxx-large;
+          font-size: xx-large;
           &::after {
             height: 6px;
           }
@@ -301,7 +301,7 @@ header {
   .btnBoxRight {
   
     .welcomeH1 {
-      font-size: xxx-large;
+      font-size: xx-large;
     }
   
     .userNameBox {
@@ -323,7 +323,7 @@ header {
         }
   
         h1 {
-          font-size: xxx-large;
+          font-size: xx-large;
           &::after {
             height: 6px;
           }
@@ -333,15 +333,15 @@ header {
   }
 
   .categorySelection {
-    left: 444px;
-    width: 160px;
+    left: 227px;
+    width: 360px;
     .profilSelectionBtn {
       font-size: xx-large;
     }
   }
 
   .profilSelection {
-    width: 240px;
+    width: 285px;
   
     .profilSelectionBtn {
       font-size: xx-large;
