edit responsive profile

--- a/src/app/landingpage/video-site/profile-details/profile-details.component.scss
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.scss
@@ -267,20 +267,14 @@ form {
   section {
     header {
       img {
-        width: 88px;
-        height: 88px;
+        width: 48px;
+        height: 48px;
       }
     }
   }
 
   .blueBtnTopRight {
-    @include dFlex($g: 16px);
-    padding: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    border: none;
-    border-radius: 45px;
-    font-size: xx-large;
+    font-size: x-large;
   }
 
   form {
@@ -322,19 +316,19 @@ form {
   }
 
   .saveBlueBtnDisabled {
-    padding: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding: 26px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border-radius: 50px;
-    font-size: xxx-large;
+    font-size: xx-large;
   }
 
   .saveBlueBtn {
-    padding: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding: 26px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border-radius: 50px;
-    font-size: xxx-large;
+    font-size: xx-large;
   }
   
 }
