--- a/src/app/landingpage/video-site/video-preview/video-preview.component.html
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.html
@@ -1,5 +1,5 @@
 <section (click)="showVideoDetails()" (mouseenter)="shwowDescription()" (mouseleave)="hideDescription()">
-    <img src="{{ video.screenshot }}" alt="videoPreviewImg">
+    <img src="{{ video.image }}" alt="videoPreviewImg">
     <div class="descriptionBox" [ngClass]="{ 'descriptionVisible' : isDescriptionVisible, 'descriptionHide' : !isDescriptionVisible , 'd-none' : isDescriptionVisible == null}">
         <span>{{ video.description }}</span>
     </div>
