bugfix - isnt available to edit guest

--- a/src/app/landingpage/video-site/profile-details/profile-details.component.scss
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.scss
@@ -191,6 +191,14 @@ form {
   }
 }
 
+.guestUserWarning{
+  @include dFlex($g: 16px);
+  flex-direction: column;
+  button{
+    margin: 0;
+  }
+}
+
 //------------------ animation ---------------------
 @keyframes lights {
   0% {
