--- a/src/app/landingpage/video-site/profile-details/profile-details.component.html
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.html
@@ -5,7 +5,7 @@
     </header>
     @if(checkIfUserIsGuest()){
         <div class="guestUserWarning">
-            <h1>Edit Geust isn't available.</h1>
+            <h1>Edit Guest isn't available.</h1>
             <button (click)="back()" class="blueBtnTopRight">Back</button>
         </div>
     } @else {
