--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -53,7 +53,7 @@
                         </div>
                     }
                     <div class="video4LoopBox" #video4LoopBox1>
-                        @for (video of newVideos; track $index) {
+                        @for (video of newVideos.slice(0, 10); track $index) {
                             <app-video-preview
                                 [video]="video"
                                 (videoSelected)="onVideoSelected($event)"
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="videoPosition">
-                <h1>Anime</h1>
+                <h1>Adventure</h1>
                 <div class="video4LoopContainer">
                     @if (showArrows[2]) {
                         <div class="arrowLeft">
@@ -77,7 +77,7 @@
                     }
                     <div class="video4LoopBox" #video4LoopBox2>
                         @for (video of newVideos; track $index) {
-                            @if (video.category === 'anime') {
+                            @if (video.category === 'adventure') {
                                 <app-video-preview
                                     [video]="video"
                                     (videoSelected)="onVideoSelected($event)"
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="videoPosition">
-                <h1>Action</h1>
+                <h1>Anime</h1>
                 <div class="video4LoopContainer">
                     @if (showArrows[3]) {
                         <div class="arrowLeft">
@@ -102,7 +102,7 @@
                     }
                     <div class="video4LoopBox marginBottom" #video4LoopBox3>
                         @for (video of newVideos; track $index) {
-                            @if (video.category === 'action') {
+                            @if (video.category === 'anime') {
                                 <app-video-preview
                                     [video]="video"
                                     (videoSelected)="onVideoSelected($event)"
@@ -113,6 +113,31 @@
                     @if (showArrows[3]) {
                         <div class="arrowRight">
                             <button (click)="ArrowRightClick(3)"><img src="../../../assets/icons/arrowRight.png" alt=""></button>
+                        </div>
+                    }
+                </div>
+            </div>
+            <div class="videoPosition">
+                <h1>Animal</h1>
+                <div class="video4LoopContainer">
+                    @if (showArrows[4]) {
+                        <div class="arrowLeft">
+                            <button (click)="ArrowLeftClick(4)"><img src="../../../assets/icons/arrowLeft.png" alt=""></button>
+                        </div>   
+                    }
+                    <div class="video4LoopBox marginBottom" #video4LoopBox4>
+                        @for (video of newVideos; track $index) {
+                            @if (video.category === 'animal') {
+                                <app-video-preview
+                                    [video]="video"
+                                    (videoSelected)="onVideoSelected($event)"
+                                ></app-video-preview>
+                            }
+                        }
+                    </div>
+                    @if (showArrows[4]) {
+                        <div class="arrowRight">
+                            <button (click)="ArrowRightClick(4)"><img src="../../../assets/icons/arrowRight.png" alt=""></button>
                         </div>
                     }
                 </div>
