--- a/src/app/landingpage/video-site/video-display/video-display.component.scss
+++ b/src/app/landingpage/video-site/video-display/video-display.component.scss
@@ -67,6 +67,7 @@ h2 {
   top: 18px;
   right: 24px;
   cursor: pointer;
+  z-index: 20;
 }
 
 .video-img-container {
@@ -303,10 +304,11 @@ select {
 
   .presents-logo {
     font-size: 74px;
+    top: 58px;
   }
   
   .presents-text {
-    top: 25px;
+    top: 101px;
     left: 54px;
   }
 
@@ -318,6 +320,36 @@ select {
     }
   }
   
+}
+
+@media (min-width: 2470px) {
+
+
+  .presents-logo {
+    top: 34px;
+  }
+  
+  .presents-text {
+    top: 78px;
+  }
+  
+}
+
+@media (min-width: 2880px) {
+
+  .video-img-container {
+    img {
+      height: 494px;
+      object-fit: cover;  
+    }
+  }
+
+  .presents-text {
+    top: 44px;
+  }
+  .presents-logo {
+    top: 0;
+  }
 }
 
 @media (max-width: 560px) {
