--- a/src/app/landingpage/imprint/privacy-policy/privacy-policy.component.html
+++ b/src/app/landingpage/imprint/privacy-policy/privacy-policy.component.html
@@ -59,8 +59,8 @@
         </div>
       </div>
       <br />
-      <p>Telephone: <a href="tel:01724180328">0172-4180328</a></p>
-      <p>Mail: <a href="mailto:mail@andre-kempf.com">mail&#64;andre-kempf.com</a></p>
+      <!-- <p>Telephone: <a href="tel:01724180328">0172-4180328</a></p> -->
+      <p>Mail: <a href="mailto:v.flix2000@gmail.com">v.flix2000&#64;gmail.com</a></p>
       
       <h2 id="content2">Overview of processing</h2>
       <p>The following overview summarizes the types of data processed and the purposes of their processing and refers to the data subjects.</p>
