--- a/src/app/landingpage/video-site/video-preview/video-preview.component.scss
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.scss
@@ -23,7 +23,7 @@ section {
     top: 0;
     width: -webkit-fill-available;
     height: -webkit-fill-available;
-    word-break: break-all;
+    word-break: normal;
     background: linear-gradient(
       to bottom,
       #202020a3 0%,
