--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -6,7 +6,7 @@
         <span>Enter your email to create your membership</span>
         <div class="inputBox">
             <input type="email" [(ngModel)]="userService.user_email" placeholder="Email Adress">
-            <button [routerLink]="['/register']">Sing up <img src="../../assets/img/white_arrow_right.svg" alt=""></button>
+            <button [routerLink]="['/register']">Sign up <img src="../../assets/img/white_arrow_right.svg" alt=""></button>
         </div>
     </div>
 
