--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -1,5 +1,5 @@
 <div class="videoPlayerBox">
-    <video autoplay muted loop #myVideo class="backgroundVideo">
+    <video muted loop #myVideo class="backgroundVideo">
         <source src="../../../assets/videos/Breakout.mp4" type="video/mp4">
     </video>
     <div class="shadow"></div>
